// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component with custom class matches snapshot 1`] = `
<input
  className="Input CUSTOM_CLASS"
/>
`;

exports[`Input component with no props matches snapshot 1`] = `
<input
  className="Input"
/>
`;
